lanecwe-Prod/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>RF_UHQ_SIC_Code__c</fullName>
        <label>SIC Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_SIC_Name__c</fullName>
        <description>Standard Industrial Classification Code</description>
        <inlineHelpText>Standard Industrial Classification Code</inlineHelpText>
        <label>SIC Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_State_Code__c</fullName>
        <label>State Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_State_Name__c</fullName>
        <label>State Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_TradeName__c</fullName>
        <description>Doing-business-as name</description>
        <inlineHelpText>Doing-business-as name</inlineHelpText>
        <label>Trade Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RF_UHQ_URL__c</fullName>
        <label>Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RK_Email__c</fullName>
        <inlineHelpText>Stores the Rainking email address in case its different than the one you are working with.</inlineHelpText>
        <label>RK-Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RK_Phone__c</fullName>
        <inlineHelpText>Shows the Rainking phone in case the primary one is different than the one Rainking has.</inlineHelpText>
        <label>RK-Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referring_Rep_Territory__c</fullName>
        <description>Used for Marketing purposes to track Referring Rep Territory from tradeshow.</description>
        <label>Referring Rep Territory</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_URL__c</fullName>
        <label>Referring URL</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejecting_a_Lead__c</fullName>
        <label>x-Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Already engaged in Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No authority (not a decision maker or champion)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interest/need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGi Test/employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to reach (after SLA attempts within specified period)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account_ID_15__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account ID 15</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Name__c</fullName>
        <label>Related Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Acct_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Acct Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Acct_Owner_ID__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Acct Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Acct_Owner_Name__c</fullName>
        <formula>Account__r.Owner_Copy__r.FirstName + &quot; &quot; + Account__r.Owner_Copy__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Acct Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <description>Used to determine Round Robin for the SMB team, each new user add 1 to the first number, subtract one for any reps leaving the team.</description>
        <formula>MOD(VALUE(Lead_Number__c) ,6) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-Round Robin ID (SMB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_ID_2__c</fullName>
        <formula>Account__r.SFDC_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Acct ID (2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlesgatewayID__c</fullName>
        <label>SalesgatewayID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_File__c</fullName>
        <description>Used to house a distinct file name for data loads.  This and Source ID used together to trace back distinct records from data loads as necessary.</description>
        <label>Source File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <description>Used with Source File to track data loads.</description>
        <label>Source ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_New__c</fullName>
        <formula>IF(BEGINS ( OwnerId , &quot;005&quot;),Owner_Copy__r.Manager.FirstName +&quot; &quot;+ Owner_Copy__r.Manager.LastName ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor-New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>Lead Owner&apos;s Manager from SFDC user record</description>
        <label>Supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_IntlCompanyID__c</fullName>
        <label>TESLA_IntlCompanyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SALESMANAGER_ID__c</fullName>
        <label>x-TESLA SALESMANAGER ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Scheduled_Time__c</fullName>
        <label>Test Drive Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>To_be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Type__c</fullName>
        <label>Trial Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate HQ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Ultimate HQ)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Z_Source__c</fullName>
        <description>Source Value</description>
        <label>Z-Source</label>
        <picklist>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesgateway</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>co_name__c</fullName>
        <description>used as a temporary field to house company name for iMeet prov form with Hubspot</description>
        <label>co_name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hubspotscore__c</fullName>
        <inlineHelpText>The score set by marketing for a particular lead based on its marketing activities, etc.  The higher the score the better</inlineHelpText>
        <label>Lead Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is1__Chat_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is1__Mail_ID__c</fullName>
        <externalId>true</externalId>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isLead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>used to tell if when an account was created from a lead...need to verify this doesnt carry over whenever its tied to an existing account?</description>
        <label>isLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsideView Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_Date_Last_Updated__c</fullName>
        <label>InsideView Date Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iv__InsideView_User_Last_Updated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InsideView User Last Updated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lead_external_id__c</fullName>
        <externalId>true</externalId>
        <label>lead_external_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tt_itda_watch__Tech_Target_Import_Timestamp__c</fullName>
        <description>A timestamp provided when Tech Target adds a Lead.</description>
        <inlineHelpText>A timestamp provided when Tech Target adds a Lead.</inlineHelpText>
        <label>Tech Target Import Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_Copy_Owner_Name__c</fullName>
        <description>Used to house the lead owner so that if a lead is merged we can see who any of the previous owners were.  Workflow rule will populate this field</description>
        <label>z-Copy Owner Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>z_Master_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to determine what the master record is for any duplicates</inlineHelpText>
        <label>z-Master Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>z_Nurture_TimeStamp__c</fullName>
        <description>Set the first time a lead is set to a Lead Status of Nurture via a Workflow Rule.  Could change to be part of a FLOW process.</description>
        <label>z-Nurture TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>z_Round_Robin_EMEA_Direct_Sales_FR__c</fullName>
        <description>When Lead: Owner Region EQUALS EMEA_Direct_Sales_FR
I need the lead to go into the following round robin:
0 goes to Bissa Kembetia
1 goes to Stephane Guiblin</description>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Round Robin for EMEA_Direct_Sales_FR</inlineHelpText>
        <label>z-Round Robin EMEA Direct Sales FR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>z_Round_Robin_EMEA_Direct_Sales_UK__c</fullName>
        <description>When Lead: Owner Region EQUALS EMEA_Direct_Sales_UK
I need the lead to go into the following round robin:
0 goes to Aaron O&apos;Neill
1 goes to Farrukh Nasiri
2 goes to Shaun Choo
3 goes to Bissa Kembetia
4 goes to Stephane Guiblin</description>
        <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Round Robin for EMEA_Direct_Sales_UK</inlineHelpText>
        <label>z-Round Robin EMEA Direct Sales UK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>z_Round_Robin_EMEA__c</fullName>
        <description>Used for determining Round Robin for EMEA Team</description>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-Round Robin (EMEA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>z_iMeet_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this to flag that an iMeet trial was created.  Mainly used so that can email Trials that associate to existing records.</description>
        <label>z-iMeet Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>z_isIM_Trial__c</fullName>
        <formula>IF(
! ISBLANK(IM_USER_ID__c), &quot;Yes&quot;, &quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z-is iMeetTrial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_m_Annual_Revenue_Range__c</fullName>
        <label>Annual Revenue Range</label>
        <picklist>
            <picklistValues>
                <fullName>Micro (US$0-$5m)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (US$6-$10m)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (US$11-$100m)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (US$101-$999m)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Large (&gt;US$1000m)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zz_Canadian_Trial__c</fullName>
        <formula>IF(
      OR(
RIGHT(Email, 3) = &quot;.ca&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;204&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;226&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;236&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;249&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;250&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;289&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;306&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;343&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;365&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;403&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;416&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;418&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;431&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;437&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;438&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;450&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;506&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;514&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;519&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;579&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;581&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;587&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;604&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;613&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;639&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;647&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;705&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;709&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;778&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;780&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;782&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;807&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;819&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;867&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;873&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;902&quot;,
LEFT(IM_PHONE_1__c, 3) = &quot;905&quot;
),
 &quot;Canada&quot;, &quot;Not Canada&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz-Canadian Trial</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>APAC_Marketing</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC Marketing</label>
        <language>en_US</language>
        <queue>APAC_Marketing</queue>
        <sharedTo>
            <roleAndSubordinates>APAC183141</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_Leads_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>AP Leads Queue</label>
        <language>en_US</language>
        <queue>AP_Leads_Queue</queue>
        <sharedTo>
            <roleAndSubordinates>APAC183141</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_My_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RATING</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Department__c</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>Role__c</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Disqualified</value>
        </filters>
        <label>All My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Budget_HubSpot_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Budget - HubSpot Queue</label>
        <language>en_US</language>
        <queue>LWMarketingQueue3</queue>
        <sharedTo>
            <group>Budget_Conferencing_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANADA_Baking</fullName>
        <filterScope>Queue</filterScope>
        <label>*CANADA: Baking</label>
        <language>en_US</language>
        <queue>CANADA_Baking</queue>
        <sharedTo>
            <group>CANADA_Hubspot</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANADA_English</fullName>
        <filterScope>Queue</filterScope>
        <label>*CANADA: English</label>
        <language>en_US</language>
        <queue>CANADA_English</queue>
        <sharedTo>
            <group>CANADA_Hubspot</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANADA_French</fullName>
        <filterScope>Queue</filterScope>
        <label>*CANADA: French</label>
        <language>en_US</language>
        <queue>CANADA_French</queue>
        <sharedTo>
            <group>CANADA_Hubspot</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANADA_Partners</fullName>
        <filterScope>Queue</filterScope>
        <label>*CANADA: Partner</label>
        <language>en_US</language>
        <queue>CANADA_Partners</queue>
        <sharedTo>
            <group>CANADA_Hubspot</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Hubspot_ACQ</fullName>
        <filterScope>Queue</filterScope>
        <label>*EMEA_Hubspot_ACQ</label>
        <language>en_US</language>
        <queue>EMEA_Hubspot_ACQ</queue>
        <sharedTo>
            <group>All_Marketing_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Hubspot_SAE</fullName>
        <filterScope>Queue</filterScope>
        <label>*EMEA_Hubspot_SAE</label>
        <language>en_US</language>
        <queue>EMEA_Hubspot_SAE</queue>
        <sharedTo>
            <group>All_Marketing_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_ISO_OPEN_LEADS</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Department__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>ao’ne,schoo,dgies,SGuibl,BKembe,FNasir,SVogt</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Disqualified</value>
        </filters>
        <label>EMEA ISO : OPEN LEADS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_ISO_Director</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_MQL</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>RF_HQ_Phone__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Web</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>Disqualified,abandoned,deferred,qualified,Qualifying,dead</value>
        </filters>
        <label>EMEAI - MQL (Unqualified)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EMEA_ADM_Pre_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HubSpot_Leads_Pre_Launch</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>HubSpot Leads - Pre Launch</label>
        <language>en_US</language>
        <queue>LWMarketingQueue3</queue>
        <sharedTo>
            <group>Marketing_NA</group>
            <group>Marketing_Super_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>